eindopdracht herschreven comments

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -12,7 +12,7 @@
         <link rel="author" href="humans.txt">
     </head>
     <body>
-	<!-- MENU HEADER -->
+	<!-- menu -->
 	<div class="header">
 		<div class="wrapper">
 			<div class="column s50">
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 
-	<!-- FILTER -->
+	<!-- filter op genre -->
 	<div class="subheader">
 		<div class="wrapper">
 			<div class="column s100 no-padding">
@@ -48,7 +48,7 @@
 
 	<main id="content">
 
-		<!-- FILMOVERVIEW -->
+		<!-- filmoverzicht -->
 		<div class="wrapper">
 			<div class="column s100">
 				<section data-route="movies" id="#movies">
@@ -73,7 +73,7 @@
 			</div>	
 		</div>
 
-		<!-- ABOUT -->
+		<!-- about pagina -->
 		<div class="wrapper">
 			<div class="column s100">
 				<section data-route="about" id="#about">
@@ -83,7 +83,7 @@
 			</div>
 		</div>
 
-		<!-- DETAILPAGINA -->
+		<!-- detail pagina van de film -->
 		<div class="wrapper">
 			<div class="column s100">
 				<section data-route="detail">
@@ -123,7 +123,7 @@
 						<h3>Actors:</h3>
 						<div class="actorspage">
 								<div data-bind="actors" class="actorlist">
-								<img data-bind="actorPicture">
+								<img data-bind="actorPhoto">
 								<h3><a data-bind="actor_name"></a></h3>
 								<a data-bind="character" class="character"></a>
 								<div class="clearer"></div>
